Header visual fix
Fix header being too big while data is being loaded

--- a/css/players/players.css
+++ b/css/players/players.css
@@ -211,6 +211,7 @@
     background-color: var(--color-lime-moss) !important;
     color: var(--color-lavender-mist) !important;
     font-weight: 700;
+    height: min-content;
 }
 
 .card:nth-child(odd)
